--- a/blog-app/pom.xml
+++ b/blog-app/pom.xml
@@ -55,8 +55,8 @@
 
         <!-- 消息队列 -->
         <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-client</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>common-rocketmq</artifactId>
         </dependency>
 
     </dependencies>
