--- a/blog-common/pom.xml
+++ b/blog-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.intecsec.mall</groupId>
         <artifactId>mall</artifactId>
-        <version>0.0.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
