--- a/item-app/pom.xml
+++ b/item-app/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mall</artifactId>
         <groupId>com.intecsec.mall</groupId>
-        <version>0.0.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -41,6 +41,10 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>common-rocketmq</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.intecsec.mall</groupId>
+            <artifactId>item-common</artifactId>
         </dependency>
 
     </dependencies>
