--- a/order-app/pom.xml
+++ b/order-app/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mall</artifactId>
         <groupId>com.intecsec.mall</groupId>
-        <version>0.0.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,6 +15,16 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>order-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>item-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>user-client</artifactId>
         </dependency>
 
         <!-- rpc框架dubbo -->
