--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.intecsec.mall</groupId>
 	<artifactId>mall</artifactId>
-	<version>0.0.1</version>
+	<version>1.0-SNAPSHOT</version>
 
 	<modules>
 		<module>blog-app</module>
