--- a/item-app/pom.xml
+++ b/item-app/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.1-WATSONS</version>
         </dependency>
 
     </dependencies>
