--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 		<gson.version>2.8.5</gson.version>
 		<commons.codec.version>1.14</commons.codec.version>
 		<javax.servlet.version>4.0.1</javax.servlet.version>
+		<guava.version>30.1-jre</guava.version>
 	</properties>
 
 
@@ -195,6 +196,17 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-security</artifactId>
+				<version>${spring.boot.starter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security.oauth</groupId>
+				<artifactId>spring-security-oauth2</artifactId>
+				<version>${spring.boot.starter.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
 				<artifactId>mybatis-spring-boot-starter</artifactId>
 				<version>${mybatis.spring.boot.starter.version}</version>
@@ -222,6 +234,12 @@
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>${commons.codec.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>${guava.version}</version>
 			</dependency>
 
 			<dependency>
